--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,23 +17,41 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".imageUploadActivity"
+            android:name=".DeleteDataActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeatilsEmpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FatchDataActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ActivityRealtimeDB"
+            android:exported="true" />
+        <activity
+            android:name=".pdfUploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".imageUploadActivity"
+            android:exported="true" />
         <activity
             android:name=".signUp"
             android:exported="false" />
         <activity
             android:name=".loginpage"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
